package es.etg.psp.dmc.ttnc.imprimibles;

public enum TipoFichero {
    TXT,
    MD,
    HTML,
    RTF,
    XML
}
