package es.etg.psp.dmc.ttnc.imprimibles.impresora;

public abstract class Impresora {
    public abstract void imprimir(String contenido);
}
